--- a/opdracht/website/css/style.css
+++ b/opdracht/website/css/style.css
@@ -21,13 +21,13 @@ div h1{
 }
 
 #poster1{
-    background-color: blue;
+    background-color:red;
 }
 
 #poster2{
-    background-color: blue;
+    background-color: purple;
 }
 
 #poster3{
-    background-color: blue;
+    background-color:brown;
 }
